<resources>
    <string name="app_name">Dondeando</string>
    <string name="hint_enter_email">escribe el email</string>
    <string name="hint_enter_password">escribe el password</string>
    <string name="button_signin_with_password">Entrar</string>
    <string name="text_dont_have_account">¿No tienes cuenta?</string>
    <string name="button_create_account">Registrate</string>
    <string name="hint_enter_username">Nombre</string>
    <string name="title_activity_create_account">Crear cuenta</string>
    <string name="text_already_have_account">¿Ya tienes cuenta?</string>
    <string name="button_sign_in">Inicia sesion</string>
    <string name="progress_dialog_loading">cargando</string>
    <string name="progress_dialog_authenticating_with_firebase">Autenticando en el sistema....</string>
    <string name="error_cannot_be_empty">esto no puede estar vacio</string>
    <string name="error_message_email_issue">Comprueba que lo hayas escrito correctamente</string>
    <string name="error_message_failed_sign_in_no_network">comprueba que tienes conexion a internet</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Ajustes</string>
    <string name="progress_dialog_creating_user_with_firebase">Creando cuenta de usuario...</string>
    <string name="error_email_taken">ese email ya esta en uso</string>
    <string name="error_invalid_email_not_valid">%s no es un correo valido</string>
    <string name="error_invalid_password_not_valid">el password debe tener mas de 6 caracteres</string>
    <string name="info_text">Nombre de la ruta</string>
</resources>
